[project]
name = "seven"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cors>=1.0.1",
    "fastapi>=0.128.0",
    "gunicorn>=23.0.0",
    "pck67-pkg",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[tool.uv.workspace]
members = [
    "sdkset",
]

[tool.uv.sources]
pck67-pkg = { workspace = true, editable = true }
